--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -29,7 +29,7 @@ jobs:
           port: ${{ secrets.SERVER_PORT }}
           script: |
             cd ${{ secrets.PROJECT_FOLDER }}
-            git pull origin staging
+            git pull origin main
             docker build . -t wedding
             docker rm -f wedding
             docker run -p 9013:80 --name wedding -d wedding
